[gd_scene load_steps=2 format=3 uid="uid://b1m2n3o4p5q6r"]

[ext_resource type="Script" path="res://ui/equipment_item_button.gd" id="1"]

[node name="EquipmentItemButton" type="Panel"]
custom_minimum_size = Vector2(80, 100)
script = ExtResource("1")

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
flat = true

[node name="Icon" type="TextureRect" parent="Button"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.0
offset_top = -25.0
offset_right = 25.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="LevelLabel" type="Label" parent="Button"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -20.0
offset_right = 80.0
grow_vertical = 0
theme_override_font_sizes/font_size = 10
text = "Lv.1"
horizontal_alignment = 1

[node name="NameLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 10
text = "Item Name"
horizontal_alignment = 1
autowrap_mode = 2
